# GitCheck

./: config.json  main.py  pyproject.toml
cli/: parser.py
core/: logic.py
