[project]
name = "GitCheck"
version = "0.5"
dependencies = [ "requests", ]

[project.scripts]
GitCheck = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*","core*"]